NIFI-12205: Moved loading of Python dependencies into background thread when processor created instead of during startup. Some code cleanup.